dynamix/force-app/main/default/objects/Project_Snag__c/Project_Snag__c.object-meta.xml
<CustomObject>
    <label>Project Snag</label>
    <nameField>
        <displayFormat>PSN-{0000}</displayFormat>
        <label>Project Snag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Snags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>