dynamix/force-app/main/default/objects/Project_Snag__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Snags</relationshipLabel>
    <relationshipName>Project_Snags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>