dynamix/force-app/main/default/objects/Project_Snag__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <type>TextArea</type>
</CustomField>