dynamix/force-app/main/default/objects/Project_Snag__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASEMENT PARKING</fullName>
            </value>
            <value>
                <fullName>STILT PARKING</fullName>
            </value>
            <value>
                <fullName>PODIUM PARKING</fullName>
            </value>
            <value>
                <fullName>OPEN PARKING</fullName>
            </value>
            <value>
                <fullName>DOUBLE PODIUM PARKING</fullName>
            </value>
            <value>
                <fullName>DOUBLE STILT PARKING</fullName>
            </value>
            <value>
                <fullName>DOUBLE OPEN PARKING</fullName>
            </value>
            <value>
                <fullName>COVERED STACK</fullName>
            </value>
            <value>
                <fullName>STACK</fullName>
            </value>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2BHK GRAND</fullName>
            </value>
            <value>
                <fullName>2 ½ BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>PENTHOUSES</fullName>
            </value>
            <value>
                <fullName>ROW HOUSES</fullName>
            </value>
            <value>
                <fullName>VILLAS</fullName>
            </value>
            <value>
                <fullName>BUNGALOW</fullName>
            </value>
            <value>
                <fullName>SHOP WITH TERRACE</fullName>
            </value>
            <value>
                <fullName>SHOP WITHOUT TERRACE</fullName>
            </value>
            <value>
                <fullName>OFFICE WITH TERRACE</fullName>
            </value>
            <value>
                <fullName>OFFICE WITHOUT TERRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>